audit-system-parent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-system-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ingestion
            pathType: Prefix
            backend:
              service:
                name: ingestion-service
                port:
                  number: 80
